err/django-ajax-chat.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djangoChat'...
Listing './lib/python3.5/site-packages/djangoChat/static'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/build'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/collections'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/models'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/templates'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/vendor'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/vendor/backbone-amd'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/vendor/jquery'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/vendor/jquery-legacy'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/vendor/requirejs'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/vendor/requirejs-text'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/vendor/underscore-amd'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/app/scripts/views'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/css'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/build'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/collections'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/models'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/templates'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/vendor'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/vendor/backbone-amd'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/vendor/jquery'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/vendor/jquery-legacy'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/vendor/requirejs'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/vendor/requirejs-text'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/vendor/underscore-amd'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/dist/scripts/views'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/less'...
Listing './lib/python3.5/site-packages/djangoChat/static/djangoChat/otherjs'...
Listing './lib/python3.5/site-packages/djangoChat/templates'...
Listing './lib/python3.5/site-packages/djangoChat/templates/djangoChat'...
Compiling './lib/python3.5/site-packages/djangoChat/views.py'...
***   File "./lib/python3.5/site-packages/djangoChat/views.py", line 17
    print request.POST
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_ajax_chat-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
